--- a/index.css
+++ b/index.css
@@ -18,18 +18,20 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center; 
-    height: 40px; 
+    height: 100px; 
 }
 
 a.btn {
     margin: 0 50px; /* Spacing between nav links */
     text-decoration: none;
     background-color: #B34000;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     border-radius: 30px;
     color: #fff;
-    font-size: 1.2em;
+    font-size: 1.4em;
     transition: background-color 0.5s;
 }
 
@@ -56,11 +58,13 @@ body {
 }
 
 .logo img {
-    width: 60vw; 
-    height: 60vh; 
+    width: 80vw; 
+    height: 80vh; 
     object-fit: fill;
-    padding-top: 100px;
-    width: 900px; 
+    padding-top: 70px;
+    width: 1000px; 
+    padding-right: 50px;
+    cursor: default;
     animation: bounceIn 1.5s ease-out;
 }
 
@@ -85,12 +89,6 @@ body {
     }
 }
 
-
-.name {
-    color: #B34000;
-    font-size: 2em;
-    text-align: center;
-}
 
 /* Layout for the info section */
 
@@ -141,13 +139,21 @@ body {
 /* Media queries for smaller screens */
 
 @media (max-width: 768px) {
-    .btn {
-        font-size: 0.9em; 
-        padding: 8px 15px; 
-        margin: 0 8px;
+
+    nav {
+            flex-direction: column;
+            align-items: center;
+            height: 300px;
+    }
+
+    nav .btn {
+        margin: 5px 0;
+        width: 80%;
+        text-align: center;
     }
 
     .logo img {
+        padding-top: 250px;
         padding-left: 30px;
         width: 85%; 
         max-height: 70vh;
@@ -160,6 +166,7 @@ body {
 }
 
 @media (max-width: 480px) {
+    
     header {
         flex-direction: column; 
         padding: 5px;
