--- a/skills.css
+++ b/skills.css
@@ -21,30 +21,29 @@ header {
 }
 
 /* Navigation */
-
 nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 0;
+    padding: 15px 0;
 }
 
 nav .logo {
     height: 50px;
     width: auto;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 a.btn {
     margin: 5px 0;
-    width: 90%;
-    text-align: center;
     text-decoration: none;
     background-color: #B34000;
     padding: 8px 0;
     border-radius: 30px;
     color: #fff;
     font-size: 0.9em;
+    width: 90%;
+    text-align: center;
     transition: background-color 0.5s;
 }
 
@@ -52,16 +51,16 @@ a.btn:hover {
     background-color: #2264FF;
 }
 
-.abtmehead {
-    padding-top: 240px; 
-    width: 100%;
-    height: auto;
+/* Header Image */
+.header {
+    margin-top: 80px; 
+    height: calc(100vh - 80px); 
     overflow: hidden;
 }
 
-.abtmehead img {
+.header img {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -86,10 +85,12 @@ a.btn:hover {
 
 .content-item img {
     width: 90%;
-    height: auto;
+    height: 0;
+    padding-bottom: 90%; 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.469);
     margin-bottom: 15px;
+    object-fit: cover; 
 }
 
 .content-item .text {
@@ -120,8 +121,30 @@ a.btn:hover {
     font-size: 1.2em;
 }
 
-/* Media Queries for Larger Screens */
+
+/* Tablet Styles */
 @media screen and (min-width: 481px) {
+    nav {
+        flex-direction: column;
+        align-items: center;
+        padding: 20px 0;
+    }
+
+    nav .logo {
+        height: 60px;
+        margin-bottom: 15px;
+    }
+
+    a.btn {
+        margin: 5px 0;
+        width: 80%;
+        font-size: 1em;
+        padding: 10px 0;
+    }
+}
+
+/* Desktop Styles */
+@media screen and (min-width: 769px) {
     nav {
         flex-direction: row;
         justify-content: space-between;
@@ -130,78 +153,41 @@ a.btn:hover {
     }
 
     nav .logo {
-        height: 60px;
+        height: 80px;
+        padding-right: 50px;
         margin-bottom: 0;
     }
 
     a.btn {
-        margin: 0 10px;
+        margin: 0 20px;
         width: auto;
-        font-size: 1em;
+        font-size: 1.2em;
         padding: 10px 15px;
     }
 
-    .abtmehead {
-        padding-top: 80px;
+    .header {
+        margin-top: 0;
+        height: calc(100vh - 10px);
     }
 
-    .content-item {
-        flex-direction: row;
-        text-align: left;
-        align-items: flex-start;
-    }
-
-    .content-item img {
-        width: 300px;
-        height: 450px;
-        margin-right: 20px;
-    }
-
-    .content-item .text {
-        width: 60%;
-        margin-left: 60px;
-    }
-
-    .content-item h2 {
-        font-size: 1.5em;
-    }
-
-    .content-item p {
-        font-size: 1.1em;
+    .header img {
+        height: calc(100% + 220px);
     }
 }
 
-@media screen and (min-width: 769px) {
+/* Media Query for 375px Screen Width */
+@media screen and (max-width: 375px) {
+    .header {
+        margin-top: 200px; 
+        height: calc(100vh - 80px); 
+    }
+
     nav .logo {
-        height: 80px;
-        padding-right: 50px;
+        height: 45px; 
     }
 
     a.btn {
-        margin: 0 20px;
-        font-size: 1.2em;
-    }
-
-    .abtmehead {
-        position: relative;
-        height: calc(100vh - 10px);
-        overflow: hidden;
-    }
-    
-    .abtmehead img {
-        position: absolute;
-        top: -80px;
-        left: 0;
-        width: 100%;
-        height: calc(100% + 220px);
-        object-fit: cover;
-    }
-
-    .content-item h2 {
-        font-size: 1.8em;
-    }
-
-    .content-item p {
-        font-size: 1.2em;
+        font-size: 0.8em;
+        padding: 6px 0;
     }
 }
