--- a/skills.css
+++ b/skills.css
@@ -7,7 +7,6 @@ body, html {
     width: 100%;
     height: 100%;
     background-color: #F8F6F2;
-    font-family: 'Merriweather', serif;
 }
 
 header {
@@ -21,29 +20,30 @@ header {
 }
 
 /* Navigation */
+
 nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px 0;
+    padding: 10px 0;
 }
 
 nav .logo {
     height: 50px;
     width: auto;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 a.btn {
     margin: 5px 0;
+    width: 90%;
+    text-align: center;
     text-decoration: none;
     background-color: #B34000;
     padding: 8px 0;
     border-radius: 30px;
     color: #fff;
     font-size: 0.9em;
-    width: 90%;
-    text-align: center;
     transition: background-color 0.5s;
 }
 
@@ -51,16 +51,16 @@ a.btn:hover {
     background-color: #2264FF;
 }
 
-/* Header Image */
-.header {
-    margin-top: 80px; 
-    height: calc(100vh - 80px); 
+.skillhead {
+    padding-top: 240px; 
+    width: 100%;
+    height: auto;
     overflow: hidden;
 }
 
-.header img {
+.skillhead img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
 }
 
@@ -83,14 +83,26 @@ a.btn:hover {
     max-width: 1000px;
 }
 
+@keyframes scale-a-lil {
+    from {
+      scale: .5;
+    }
+  }
+    
+  @media (prefers-reduced-motion: no-preference) {
+    .content-item {
+      animation: scale-a-lil linear both;
+      animation-timeline: view();
+      animation-range: 25vh 75vh;
+    }
+  }
+
 .content-item img {
     width: 90%;
-    height: 0;
-    padding-bottom: 90%; 
+    height: auto;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.469);
     margin-bottom: 15px;
-    object-fit: cover; 
 }
 
 .content-item .text {
@@ -121,30 +133,18 @@ a.btn:hover {
     font-size: 1.2em;
 }
 
+/* Footer */
 
-/* Tablet Styles */
-@media screen and (min-width: 481px) {
-    nav {
-        flex-direction: column;
-        align-items: center;
-        padding: 20px 0;
-    }
-
-    nav .logo {
-        height: 60px;
-        margin-bottom: 15px;
-    }
-
-    a.btn {
-        margin: 5px 0;
-        width: 80%;
-        font-size: 1em;
-        padding: 10px 0;
-    }
+footer {
+    margin-top: 20px;
+    background-color: #e4e2de;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    padding: 2px;
 }
 
-/* Desktop Styles */
-@media screen and (min-width: 769px) {
+/* Media Queries for Larger Screens */
+@media screen and (min-width: 481px) {
     nav {
         flex-direction: row;
         justify-content: space-between;
@@ -153,41 +153,78 @@ a.btn:hover {
     }
 
     nav .logo {
-        height: 80px;
-        padding-right: 50px;
+        height: 60px;
         margin-bottom: 0;
     }
 
     a.btn {
-        margin: 0 20px;
+        margin: 0 10px;
         width: auto;
-        font-size: 1.2em;
+        font-size: 1em;
         padding: 10px 15px;
     }
 
-    .header {
-        margin-top: 0;
-        height: calc(100vh - 10px);
+    .skillhead {
+        padding-top: 80px;
     }
 
-    .header img {
-        height: calc(100% + 220px);
+    .content-item {
+        flex-direction: row;
+        text-align: left;
+        align-items: flex-start;
+    }
+
+    .content-item img {
+        width: 300px;
+        height: 450px;
+        margin-right: 20px;
+    }
+
+    .content-item .text {
+        width: 60%;
+        margin-left: 60px;
+    }
+
+    .content-item h2 {
+        font-size: 1.5em;
+    }
+
+    .content-item p {
+        font-size: 1.1em;
     }
 }
 
-/* Media Query for 375px Screen Width */
-@media screen and (max-width: 375px) {
-    .header {
-        margin-top: 200px; 
-        height: calc(100vh - 80px); 
-    }
-
+@media screen and (min-width: 769px) {
     nav .logo {
-        height: 45px; 
+        height: 80px;
+        padding-right: 50px;
     }
 
     a.btn {
-        font-size: 0.8em;
-        padding: 6px 0;
+        margin: 0 20px;
+        font-size: 1.2em;
+    }
+
+    .skillhead {
+        position: relative;
+        height: calc(100vh - 10px);
+        overflow: hidden;
+    }
+    
+    .skillhead img {
+        position: absolute;
+        top: -80px;
+        left: 0;
+        width: 100%;
+        height: calc(100% + 220px);
+        object-fit: cover;
+    }
+
+    .content-item h2 {
+        font-size: 1.8em;
+    }
+
+    .content-item p {
+        font-size: 1.2em;
     }
 }
