--- a/projects.css
+++ b/projects.css
@@ -51,93 +51,90 @@ a.btn:hover {
     background-color: #2264FF;
 }
 
-.skillhead {
+.projectheader {
     padding-top: 240px; 
     width: 100%;
     height: auto;
     overflow: hidden;
 }
 
-.skillhead img {
+.projectheader img {
     width: 100%;
     height: auto;
     object-fit: cover;
 }
 
-/* Content Section */
-.content-section {
-    padding: 20px 10px;
-    background-color: #F8F6F2;
+/* Section Container */
+.section-container {
     display: flex;
-    flex-direction: column;
     align-items: center;
-}
-
-.content-item {
-    display: flex;
+    justify-content: center;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 20px;
-    width: 100%;
-    max-width: 1000px;
+    margin: 30px 0;
 }
 
-@keyframes slide-in-left {
-    from {
-        transform: translateX(-100%);
-        opacity: 0; 
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .content-item {
-        animation: slide-in-left 0.5s ease-out both;
-        animation-timeline: view();
-        animation-range: 25vh 75vh;
-    }
-}
-
-
-.content-item img {
-    width: 90%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.469);
-    margin-bottom: 15px;
-}
-
-.content-item .text {
-    width: 100%;
+/* Rounded Rectangle */
+.rounded-rectangle1 {
+    width: 400px; 
+    height: 200px; 
     background-color: #B34000;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.469);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.526);
+    border-radius: 15px;
+    margin-right: 5px;
+    /* Add the image */
+    background-image: url('/Images/LOGO\ Export.svg');
+    background-position: center; 
+    background-repeat: no-repeat;
+    overflow: hidden; 
+    /* transition */
+    transition: transform 0.5s ease-in-out;
+}
+
+.rounded-rectangle1:hover {
+    transform: scale(1.1);
+}
+
+.rounded-rectangle2 {
+    width: 400px; 
+    height: 200px; 
+    background-color: #B34000;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.526);
+    border-radius: 15px;
+    margin-right: 5px;
+    /* Add the image */
+    background-image: url('/Images/player_idle.svg');
+    background-position: center; 
+    background-repeat: no-repeat;
+    overflow: hidden; 
+    /* transition */
+    transition: transform 0.5s ease-in-out;
+}
+
+.rounded-rectangle2:hover {
+    transform: scale(1.1);
+}
+
+/* Section Title */
+.section-title1 {
+    font-size: 30px;
+    background-color: #B34000;
     border-radius: 30px;
     padding: 20px;
-}
-
-.content-item h2 {
-    margin-top: 0;
-    font-size: 1.3em;
+    margin-left: 85px;
     color: #fff;
+    text-align: left;
 }
 
-.content-item p {
-    font-size: 1em;
+.section-title2 {
+    font-size: 30px;
+    background-color: #B34000;
+    border-radius: 30px;
+    padding: 20px;
+    margin-left: 50px;
     color: #fff;
+    text-align: left;
 }
 
-.content-item a {
-    text-decoration: underline;
-    color: #fff;
-}
-
-.content-item a:hover {
-    font-size: 1.2em;
-}
 
 /* Footer */
 
@@ -170,33 +167,8 @@ footer {
         padding: 10px 15px;
     }
 
-    .skillhead {
+    .projectheader {
         padding-top: 80px;
-    }
-
-    .content-item {
-        flex-direction: row;
-        text-align: left;
-        align-items: flex-start;
-    }
-
-    .content-item img {
-        width: 300px;
-        height: 450px;
-        margin-right: 20px;
-    }
-
-    .content-item .text {
-        width: 60%;
-        margin-left: 60px;
-    }
-
-    .content-item h2 {
-        font-size: 1.5em;
-    }
-
-    .content-item p {
-        font-size: 1.1em;
     }
 }
 
@@ -211,13 +183,13 @@ footer {
         font-size: 1.2em;
     }
 
-    .skillhead {
+    .projectheader {
         position: relative;
         height: calc(100vh - 10px);
         overflow: hidden;
     }
     
-    .skillhead img {
+    .projectheader img {
         position: absolute;
         top: -80px;
         left: 0;
@@ -226,11 +198,38 @@ footer {
         object-fit: cover;
     }
 
-    .content-item h2 {
-        font-size: 1.8em;
+        /* Section Container */
+    .section-container {
+        display: flex;
+        flex-direction: row;
+        margin: 40px 0;
     }
 
-    .content-item p {
-        font-size: 1.2em;
+    /* Rounded Rectangle */
+    .rounded-rectangle {
+        width: 600px; 
+        height: 400px; 
+        background-color: #B34000;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        border-radius: 15px;
+        margin-right: 20px;
+        /* Add the image */
+        background-image: url('/Images/LOGO\ Export.svg');
+        background-position: center; 
+        background-repeat: no-repeat;
+        overflow: hidden; 
+    }
+
+    
+
+    /* Section Title */
+    .section-title {
+        font-size: 36px;
+        background-color: #B34000;
+        border-radius: 30px;
+        padding: 20px;
+        margin-left: 80px;
+        color: #fff;
+        text-align: left;
     }
 }
