--- a/about_me.css
+++ b/about_me.css
@@ -35,7 +35,7 @@ nav .logo {
 }
 
 a.btn {
-    margin: 5px 0;
+    margin-right: 15px;
     width: 90%;
     text-align: center;
     text-decoration: none;
