--- a/projects.css
+++ b/projects.css
@@ -81,12 +81,10 @@ a.btn:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.526);
     border-radius: 15px;
     margin-right: 5px;
-    /* Add the image */
     background-image: url('/Images/LOGO\ Export.svg');
     background-position: center; 
     background-repeat: no-repeat;
     overflow: hidden; 
-    /* transition */
     transition: transform 0.5s ease-in-out;
 }
 
@@ -101,12 +99,10 @@ a.btn:hover {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.526);
     border-radius: 15px;
     margin-right: 5px;
-    /* Add the image */
     background-image: url('/Images/player_idle.svg');
     background-position: center; 
     background-repeat: no-repeat;
     overflow: hidden; 
-    /* transition */
     transition: transform 0.5s ease-in-out;
 }
 
@@ -135,6 +131,12 @@ a.btn:hover {
     text-align: left;
 }
 
+.dev {
+    text-align: end;
+    margin-right: 400px;
+    margin-bottom: 50px;
+    margin-top: -60px;
+}
 
 /* Footer */
 
@@ -213,7 +215,6 @@ footer {
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         border-radius: 15px;
         margin-right: 20px;
-        /* Add the image */
         background-image: url('/Images/LOGO\ Export.svg');
         background-position: center; 
         background-repeat: no-repeat;
